--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write ."
   },
-  "private": true,
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "private": false,
   "dependencies": {
     "@angular/animations": "^14.1.3",
     "@angular/cdk": "^14.1.3",
@@ -45,6 +51,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "^2.7.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.7.4"
   }
 }
