--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^14.1.3",
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
+    "@labshare/ls-font": "^1.11.0",
     "immutable": "^4.1.0",
     "immutable-rxjs": "^1.0.3",
     "rxjs": "~7.5.6",
