--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@angular/platform-browser": "^14.1.3",
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
+    "@labshare/base-ui-services": "^2.0.1",
     "immutable": "^4.1.0",
     "immutable-rxjs": "^1.0.3",
+    "ngx-toastr": "^12.1.0",
+    "query-string": "^7.1.1",
     "rxjs": "~7.5.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
