--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
     "@labshare/base-ui-services": "^3.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.11.6",
     "immutable": "^4.1.0",
     "immutable-rxjs": "^1.0.3",
     "ngx-toastr": "^14.2.2",
