--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@labshare/base-ui-services": "^3.0.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.1",
     "immutable": "^4.1.0",
     "immutable-rxjs": "^1.0.3",
     "ngx-toastr": "^14.2.2",
@@ -46,6 +47,7 @@
     "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.3",
+    "@angular/localize": "^14.1.3",
     "@types/jasmine": "~4.0.3",
     "@typescript-eslint/eslint-plugin": "5.33.1",
     "@typescript-eslint/parser": "5.33.1",
